Fixed navbar always toggling on small screens.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1464,12 +1464,12 @@
 	.navPanelToggle {
 		text-decoration: none;
 		text-decoration: none;
-		height: 100%;
 		left: 0;
 		position: absolute;
 		top: 0;
-		width: 100%;
+		width: 5em;
 		display: none;
+		height: 4em;
 	}
 
 	.navPanelToggle:before {
